# learnJNI

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/noodle/learnjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/people/: people.cpp  people.h
app/src/main/java/com/noodle/learnjni/: MainActivity.java
app/src/main/java/com/noodle/learnjni/builder/: User.java  UserBuilder.java
app/src/main/java/com/noodle/learnjni/enums/: Test.java  Week.java
app/src/main/java/com/noodle/learnjni/genericity/: GenericityInterface.java  GenericityIntfcImp.java  GenricityClass.java
app/src/main/java/com/noodle/learnjni/innerclass/: AnonymousInner.java
app/src/main/java/com/noodle/learnjni/lambda/: Main.java  MethodRef.java
app/src/main/java/com/noodle/learnjni/proxy/: Subject.java  SubjectHandler.java  SubjectImp.java
app/src/main/java/com/noodle/learnjni/proxy/aop/: Person.java  PersonHandler.java  PersonImp.java
app/src/main/java/com/noodle/learnjni/proxy/multiInterface/: Cook.java  CookHandler.java  CookImp.java  Driver.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/noodle/learnjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
